--- a/frontend/src/pages/styles/Users.css
+++ b/frontend/src/pages/styles/Users.css
@@ -7,12 +7,10 @@
   }
 }
 
-/* Basic styles for the User List component */
 .user-list {
   padding: 10px 20px;
 }
 
-/* Search bar styling */
 .search-container {
   display: flex;
   align-items: center;
@@ -20,7 +18,6 @@
 }
 
 .search-bar {
-  /* width: 100%; */
   flex-grow: 1;
   padding: 10px;
   font-size: 1rem;
@@ -44,7 +41,6 @@
   background-color: #45a049;
 }
 
-/* Styling for user items */
 .user-items {
   display: flex;
   flex-direction: column;
@@ -68,13 +64,11 @@
   background-color: #e1e1e1;
 }
 
-/* Highlight selected user */
 .user-item.selected {
   background-color: #00bcd4;
   color: white;
 }
 
-/* Styling for user avatar */
 .user-avatar {
   width: 40px;
   height: 40px;
@@ -85,10 +79,9 @@
   width: 40px;
   height: 40px;
   object-fit: cover;
-  border-radius: 50%; /* Circular avatar */
+  border-radius: 50%;
 }
 
-/* Styling for user information */
 .user-info {
   display: flex;
   gap: 5px;
@@ -109,7 +102,6 @@
   color: #333;
 }
 
-/* Styling for the CLAIM button */
 .claim-button {
   padding: 10px 20px;
   font-size: 1rem;
